adição do texto explicativo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         <div class="chamada-texto">
             <h1>‼️NOVOS FILMES MARVEL! CALENDÁRIO Fase 5 e 6.</h1>
             <p>#MARVEL</p>
+            <p>
+                Alguns dos principais lancamentos da #MARVEL, para 2024, 2025 e 2026.
+            </p>
+            <p>A internet foi a baixo com o anúncio do James Gunn nas redes sociais. Agora não tem mais volta –  a primeira lista oficial de projetos da DC é uma realidade e trouxe séries de TV pra HBO Max, e vários longas-metragens. Pra você ter ideia já tem data pra The Batman Parte 2 e o reboot do Superman. 
+                Hoje não foi um dia pra corações fracos. Lá pelas 2 da tarde no Brasil o James Gunn em pessoa postou um vídeo falando dos projetos que tão na agulha pra serem desenvolvidos 
+                A dupla James Gunn e Peter Safran balançou as estruturas da cultura pop há alguns meses atrás como os líderes de todos os produtos de cinema, tv, animações e games da DC, com a missão de unir tudo isso.
+                E hoje foi dia de parar com as especulações e pôr as cartas na mesa. Então vem ver tudo que tá confirmado com filmes e séries da DC a partir de agora.
+            </p>
         </div>
 
         <div>
